# UOX3

./: CMakeLists.txt  LICENSE  README.md
cmake/modules/: FindGit.cmake  FindOpenSSL.cmake  FindPlatform.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
dep/spidermonkey/: CMakeLists.txt  UpgradeLog.XML  js.mak
dep/spidermonkey/fdlibm/: fdlibm.mak
docs/: CreatingAccount.txt  client-config.html  commandlist.html  installation.html
docs/JavaScripting/: SQLManagerm.html  SQLManagerp.html  functionsToC.html  updates.html
docs/Misc/: directorystructure.txt
sql/updates/: 0001_DMY_25_08_2014.sql  0002_DMY_26_08_2014.sql
src/: CMakeLists.txt
src/system/: CMakeLists.txt
src/system/BaseObjects/: PageVector.h  cBaseObject.h  cBaseobject.cpp  cChar.cpp  cChar.h  cConsole.cpp  cConsole.h  cGuild.cpp  cGuild.h  cItem.cpp  cItem.h  cMultiObj.cpp  cMultiObj.h  cSocket.cpp  cSocket.h  cSpawnRegion.cpp  cSpawnRegion.h  cThreadQueue.cpp  cThreadQueue.h  funcdecl.h  queue.cpp  threadsafeobject.cpp  threadsafeobject.h  townregion.cpp  townregion.h  uoxstruct.h
src/system/JsEngine/: CJSEngine.cpp  CJSEngine.h  CJSMapping.cpp  CJSMapping.h  JSEncapsulate.cpp  JSEncapsulate.h  SEFunctions.cpp  SEFunctions.h  UOXJSClasses.h  UOXJSMethods.cpp  UOXJSMethods.h  UOXJSPropertyEnums.h  UOXJSPropertyFuncs.cpp  UOXJSPropertyFuncs.h  UOXJSPropertySpecs.h  cScript.cpp  cScript.h
src/system/Network/: CPacketReceive.cpp  CPacketReceive.h  CPacketSend.cpp  CPacketSend.h  network.cpp  network.h
src/system/Other/: CResponse.cpp  CResponse.h  SQLManager.cpp  SQLManager.h  ai.cpp  archive.cpp  cDice.cpp  cPlayerAction.cpp  cSkillClass.h  cVersionClass.cpp  cVersionClass.h  calcfuncs.cpp  cdice.h  classes.h  cmdtable.cpp  cmdtable.h  dist.cpp  effect.cpp  enums.h  fileio.cpp  fileio.h  findfuncs.cpp  mapclasses.h  npcs.cpp  pcmanage.cpp  power.h  stream.h  typedefs.h
src/system/Scripts/: Dictionary.cpp  Dictionary.h  cServerData.cpp  cServerData.h  cServerDefinitions.cpp  cServerDefinitions.h  scriptc.cpp  scriptc.h  ssection.cpp  ssection.h
src/system/Subsystem/: CDataList.h  CGump.cpp  Config.h  ObjectFactory.cpp  ObjectFactory.h  PartySystem.cpp  PartySystem.h  Platform.h  Prerequisites.h  Singleton.h  UOXStdHeaders.h  boats.cpp  books.cpp  books.h  cAccountClass.cpp  cAccountClass.h  cEffects.h  cMagic.h  cRaces.cpp  cRaces.h  cWeather.cpp  combat.cpp  combat.h  commands.cpp  commands.h  gump.h  gumps.cpp  house.cpp  items.cpp  jail.cpp  jail.h  lineofsight.cpp  magic.cpp  magic.h  mapstuff.cpp  mapstuff.h  movement.cpp  movement.h  msgboard.cpp  msgboard.h  (+22 more)
src/uox3/: CMakeLists.txt  check.cmake  uox3.aps  uox3.cpp  uox3.h
src/uox3/content/: uox.ini
src/uox3/content/archives/: readme.txt
src/uox3/content/dfndata/advance/: advance.dfn
src/uox3/content/dfndata/command/: commands.dfn
src/uox3/content/dfndata/spells/: spells.dfn
src/uox3/content/docs/: UOX3_Changelog.txt
src/uox3/content/html/: gmstatus.html  guild.html  player.html  serverstatus.html
src/uox3/content/js/: jse_fileassociations.scp
src/uox3/content/js/commands/: reload.js
src/uox3/content/js/commands/custom/: misc-cmd.js
src/uox3/content/js/console/: reloads.js
src/uox3/content/js/item/: potion.js
src/uox3/content/js/magic/: clumsy.js  level1targ.js
src/uox3/content/js/npc/speech/: speech_001.js
src/uox3/content/js/server/light/: torch02_on.js
src/uox3/content/js/server/misc/: deed_005.js  furniture_smartturn.js
src/uox3/content/js/server/resource/: sheepshearing.js
