CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(uox3)

SET(CMAKE_DISABLE_SOURCE_CHANGES ON)
SET(CMAKE_DISABLE_IN_SOURCE_BUILD ON)

SET(CMAKE_SKIP_BUILD_RPATH 0)
SET(CMAKE_BUILD_WITH_INSTALL_RPATH 0)
SET(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH 1)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

INCLUDE(OutOfSourceBuild)

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

INCLUDE(FindPlatform)

SET(OPENSSL_EXPECTED_VERSION 1.0.0)
FIND_PACKAGE(OpenSSL REQUIRED)

IF(NOT USE_MYSQL_SOURCES)
  FIND_PACKAGE(MySQL REQUIRED)
ENDIF()

IF(UNIX)
  FIND_PACKAGE(ZLIB)
ENDIF()

IF(NOT WITHOUT_GIT)
  FIND_PACKAGE(Git)
ENDIF()

ADD_SUBDIRECTORY(dep)
ADD_SUBDIRECTORY(src)