#SET(spidermonkey_STAT_SRCS
#js.c
#jsapi.c
#jsarena.c
#jsarray.c
#jsatom.c
#jsbool.c
#jscntxt.c
#jscpucfg.c
#jsdate.c
#jsdbgapi.c
#jsdhash.c
#jsdtoa.c
#jsemit.c
#jsexn.c
#jsfile.c
#jsfun.c
#jsgc.c
#jshash.c
#jsinterp.c
#jslock.c
#jslog2.c
#jslong.c
#jsmath.c
#jsnum.c
#jsobj.c
#jsopcode.c
#jsparse.c
#jsprf.c
#jsregexp.c
#jsscan.c
#jsscope.c
#jsscript.c
#jsstr.c
#jsutil.c
#jsxdrapi.c
#jsxml.c
#prmjtime.c
#)
#
#include_directories(
#  ${CMAKE_CURRENT_SOURCE_DIR}
#)
#
#add_library(spidermonkey STATIC ${spidermonkey_STAT_SRCS})